--- a/WeBuyForYou/res/values/strings.xml
+++ b/WeBuyForYou/res/values/strings.xml
@@ -47,5 +47,7 @@
     <string name="hint_name">Name</string>
     <string name="hint_occasion">Occasion</string>
     
-
+    <string name="emailid">webuyforyou7@gmail.com</string>
+    <string name="password">yaminivb4u</string>
+    
 </resources>
